# xtap

./: Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
crates/xtap-cli/: Cargo.toml
crates/xtap-cli/src/: command_prelude.rs  errors.rs  external.rs  main.rs
crates/xtap-cli/src/commands/: list.rs  mod.rs
crates/xtap-core/: Cargo.toml  LICENSE-MIT
crates/xtap-core/src/: drop.rs  lib.rs  merge.rs  merger.rs  reader.rs  record.rs
crates/xtap-core/src/xlsx/: mod.rs  reader.rs
crates/xtap-util/: Cargo.toml
crates/xtap-util/src/: lib.rs  macros.rs  shell.rs
src/cli/: command_prelude.rs  consts.rs  errors.rs  main.rs
src/cli/commands/: mod.rs
src/cli/util/: external.rs  lev_distance.rs  mod.rs  shell.rs
