[package]
name = "xtap-core"
version = "0.1.0"
authors = ["Aaron Taner <mapkts@gmail.com>"]
description = "xtap as library"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mapkts/xtap"
repository = "https://github.com/mapkts/xtap"
documentation = "https://docs.rs/xtap"
edition = "2021"
