[package]
name = "xtap-core"
version = "0.1.0"
authors = ["Aaron Taner <mapkts@gmail.com>"]
description = "xtap as a library"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mapkts/xtap"
repository = "https://github.com/mapkts/xtap"
documentation = "https://docs.rs/xtap-core"
edition = "2021"

[dependencies]
calamine = { version = "0.18.0", features = ["dates"] }
csv = "1.1"
bstr = "0.2"
encoding = "0.2.33"
